--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "order-system",
   "version": "1.0.0",
-  "main": "server.js", // <-- 이 부분을 "server.js"로 변경
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js", // <-- 이 라인을 추가
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
